--- a/frontend/src/styles/user/login.scss
+++ b/frontend/src/styles/user/login.scss
@@ -36,7 +36,7 @@
 }
 
 .userInfo {
-  margin-top: 80%;
+  margin-top: 5%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -65,18 +65,29 @@
 }
 
 .inputAddress {
+  width: 100%;
   display: flex;
+  justify-content: center;
   list-style: none;
   font-family: "sg1Glyph";
-
   margin-right: 5px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: rgb(238, 127, 79);
 }
 
 .gateInfo {
+  display: flex;
+  flex-direction: column;
+
   p {
-    font-size: 2rem;
-    margin: 12px 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1rem;
+    padding: 0.5rem 0;
+  }
+
+  .tuto {
+    width: 100%;
+    text-align: center;
   }
 }
